# asterisk

./: .gitignore  CMakeLists.txt
example/: CMakeLists.txt
example/file/: file.c
example/task/: task.c
example/tcp/: cli.c  tcp.c
example/udp/: udp.c  udp_cli.c
include/: async.h  file.h  io_sched.h  io_task.h  lib.h  run.h  sched.h  task.h  tcp.h  tcp_acpt.h  thd.h  udp.h  v4.h
include/asterisk/: core.h  fs.h  io_run.h  io_serv.h  net.h  tcp.h  v4.h
include/asterisk/core/: io_sched.h  this.h
include/asterisk/fs/: file.h
include/asterisk/net/: end.h  tcp.h  tcp_acpt.h  udp.h  v4.h  v6.h
src/: CMakeLists.txt  async.c  async.h  core.h  curr.h  env.c  env.h  file.c  file.h  io_res.h  io_run.h  io_sched.c  io_sched.h  io_serv.h  io_task.c  io_task.h  lib.c  lib.h  main.c  net.h  run.h  sched.c  sched.h  task.c  task.h  tcp.c  tcp.h  tcp_acpt.c  tcp_acpt.h  thd.c  thd.h  this.h  udp.c  udp.h  v4.c  v4.h
src/base/details/: task.c
src/core/: core.h  heap.h  io_res.h  io_sched.h  page.h  thd.h  this.h
src/core/linux/epoll/: core.c  core.h  heap.c  heap.h  io_dev.c  io_dev.h  io_poll.c  io_poll.h  io_res.c  io_res.h  io_sched.c  io_sched.h  page.c  page.h  thd.c  thd.h  this.c  this.h
src/core/win32/: core.c  core.h  file.c  file.h  heap.c  heap.h  io_res.c  io_res.h  io_run.c  io_run.h  io_sched.c  io_sched.h  io_serv.c  io_serv.h  page.c  page.h  tcp.c  tcp.h  tcp_acpt.c  tcp_acpt.h  thd.c  thd.h  this.c  this.h  udp.c  udp.h  v4.c  v4.h  ws2.c  ws2.h
src/details/: curr.h  env.h  file.h  io_sched.h  io_task.h  lib.h  sched.h  task.h  tcp.h  tcp_acpt.h  thd.h  udp.h  v4.h
src/details/base/: CMakeLists.txt
src/details/base/details/: task.c
src/details/base/details-arch/x86_64/: cpu.c
src/details/env/win32/: env.c  env.h  file.c  file.h  io_res.c  io_sched.c  tcp.c  tcp_acpt.c  tcp_acpt.h
src/details/win32/: curr.c  curr.h  env.c  env.h  file.c  file.h  io_res.c  io_res.h  io_sched.c  io_sched.h  io_task.c  io_task.h  lib.c  lib.h  sched.c  sched.h  task.c  task.h  tcp.c  tcp.h  tcp_acpt.c  tcp_acpt.h  thd.c  thd.h  udp.c  udp.h  v4.c  v4.h
src/env/: tcp.h
src/env/win32/: env.c  env.h  io_res.c  io_res.h  io_sched.c  io_sched.h  tcp.c  tcp.h
src/fs/: file.h
src/fs/linux/epoll/: file.c  file.h
src/fs/win32/: file.c  file.h
src/net/: end.h  net.h  tcp.h  tcp_acpt.h  udp.h  v4.h  v6.h
src/net/linux/epoll/: end.c  end.h  tcp.c  tcp.h  tcp_acpt.c  tcp_acpt.h  udp.c  udp.h  v4.c  v4.h  v6.c  v6.h
src/net/win32/: end.c  end.h  net.c  net.h  tcp.c  tcp.h  tcp_acpt.c  tcp_acpt.h  udp.c  udp.h  v4.c  v4.h  v6.h
